--- a/Medicines/Base.lproj/Main.storyboard
+++ b/Medicines/Base.lproj/Main.storyboard
@@ -107,6 +107,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
+                        <segue destination="XxG-YX-VDt" kind="relationship" relationship="viewControllers" id="fce-mq-7tF"/>
                         <segue destination="KAS-X9-u3S" kind="relationship" relationship="viewControllers" id="PYh-LR-e4H"/>
                         <segue destination="fJL-UC-FYT" kind="relationship" relationship="viewControllers" id="oYA-tI-CPZ"/>
                         <segue destination="KUS-15-8Ma" kind="relationship" relationship="viewControllers" id="aM1-rl-5Qp"/>
@@ -132,7 +133,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartItemCell" id="DGj-32-Lmw" customClass="CartTableViewCell" customModule="Medicines" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="CartItemCell" id="DGj-32-Lmw" customClass="CartTableViewCell" customModule="Medicines" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="375" height="132"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DGj-32-Lmw" id="Jq9-KN-3Mo">
@@ -229,6 +230,62 @@
             </objects>
             <point key="canvasLocation" x="3316" y="375.56221889055473"/>
         </scene>
+        <!--Illnesses-->
+        <scene sceneID="pLp-WA-hnH">
+            <objects>
+                <tableViewController id="9eU-8c-Xzu" customClass="IllnessesTableViewController" customModule="Medicines" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Jwk-Vg-K0g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="IllnessCell" textLabel="7al-42-GVs" style="IBUITableViewCellStyleDefault" id="yTE-ma-aNT">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yTE-ma-aNT" id="T9a-qI-hf6">
+                                    <rect key="frame" x="0.0" y="0.0" width="327" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7al-42-GVs">
+                                            <rect key="frame" x="16" y="0.0" width="311" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="9eU-8c-Xzu" id="gG5-LH-62F"/>
+                            <outlet property="delegate" destination="9eU-8c-Xzu" id="0KL-bB-4HV"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Illnesses" id="xPU-TM-Lpy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HyQ-wv-fYT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2377" y="1071"/>
+        </scene>
+        <!--Illnesses-->
+        <scene sceneID="C9o-y6-R0C">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mZZ-0G-4Qv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="XxG-YX-VDt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Illnesses" id="83c-Y5-0kq"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Gbg-e7-3hb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="9eU-8c-Xzu" kind="relationship" relationship="rootViewController" id="LIO-kZ-Rx2"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1430" y="1071"/>
+        </scene>
         <!--Medicines-->
         <scene sceneID="to4-tn-IaO">
             <objects>
@@ -286,7 +343,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xzA-8r-DqJ" userLabel="Pop-up View">
-                                <rect key="frame" x="30" y="243" width="315" height="182"/>
+                                <rect key="frame" x="30" y="242.5" width="315" height="182"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7SO-Pd-DNQ">
                                         <rect key="frame" x="8" y="150" width="299" height="24"/>
@@ -789,7 +846,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GjM-xP-wzT">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                     <state key="normal" title="Change Phone Number"/>
                                                     <connections>
@@ -813,7 +870,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter new phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nnf-jT-umb">
-                                                    <rect key="frame" x="16" y="8" width="343" height="43.5"/>
+                                                    <rect key="frame" x="16" y="8" width="288" height="43.5"/>
                                                     <nil key="textColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -908,7 +965,7 @@
         <scene sceneID="uwK-OZ-MHw">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KUS-15-8Ma" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="XkL-xf-y6P"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile" id="XkL-xf-y6P"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="0gC-lY-JpG">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
@@ -921,12 +978,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xRJ-ya-ppQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2376.8000000000002" y="-1057.4212893553224"/>
+            <point key="canvasLocation" x="2377" y="-1057"/>
         </scene>
     </scenes>
     <resources>
         <image name="PriceButton" width="11" height="24"/>
         <image name="cart" width="25" height="25"/>
         <image name="logo" width="233" height="228"/>
+        <image name="profile" width="25" height="25"/>
     </resources>
 </document>
